--- a/certifications.html
+++ b/certifications.html
@@ -45,55 +45,73 @@
         </nav>
         <main class="cover">
             <h1 class="text-center text-lg">Certifications</h1>
-                <div class="carousel" id="certifications">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
-                        </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                        <img src="https://e-portfolio.static.domains/CareerSafe-%20Critical%20Thinking-1.png"
-                        class="d-block w-100" alt="CareerSafe Critical Thinking Skills Certification">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="https://e-portfolio.static.domains/Copy%20of%20Completion%20Certificate%20-%20CS%20Teamwork%20Skills-1.png" class="d-block w-100" 
-                          alt="CareerSafe Teamwork Skills Training Certification">
-                        </div>
-                        <div class="carousel-item">
-                          <img src="https://e-portfolio.static.domains/CareerSafe%20Time%20Management-1.png" class="d-block w-100" 
-                           alt="CareerSafe Time Management Training Certification">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/CareerSafe%20Personal%20Finance%20Management-1.png" class="d-block w-100" 
-                            alt="CareerSafe Personal Financial Management Training Certification">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/CareerSafe%20OSHA-10%20Certification-1.png" class="d-block w-100" 
-                            alt="CareerSafe OSHA-10 Training Certification">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/CareerSafe%20Cyber%20Safety%20Awareness%20Certificate-1.png" class="d-block w-100" 
-                            alt="CareerSafe Cyber Safety Awareness Training Certification">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://e-portfolio.static.domains/CareerSafe%20Communication-1.png" class="d-block w-100" 
-                            alt="CareerSafe Communication Skills Skills Training Certification">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h1 class="text-center">CareerSafe Certifications</h1>
+                        <div class="container">
+                            <ul>
+                                <li>Critical Thinking Skills Certification</li>
+                                <li>Teamwork Skills Certification</li>
+                                <li>Time Management Certification</li>
+                                <li>Personal Financial Management Certification</li>
+                                <li>OSHA-10 Certification</li>
+                                <li>Cyber Saftey Awareness Certification</li>
+                                <li>Communication Skills Certification</li>
+                            </ul>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                     </button>
+                    <div class="col-sm-6">
+                        <div class="carousel" id="certifications">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                                </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                <img src="https://e-portfolio.static.domains/CareerSafe-%20Critical%20Thinking-1.png"
+                                class="d-block w-100 center" alt="CareerSafe Critical Thinking Skills Certification">
+                                </div>
+                                <div class="carousel-item">
+                                <img src="https://e-portfolio.static.domains/Copy%20of%20Completion%20Certificate%20-%20CS%20Teamwork%20Skills-1.png" class="d-block w-100" 
+                                alt="CareerSafe Teamwork Skills Training Certification">
+                                </div>
+                                <div class="carousel-item">
+                                <img src="https://e-portfolio.static.domains/CareerSafe%20Time%20Management-1.png" class="d-block w-100" 
+                                alt="CareerSafe Time Management Training Certification">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://e-portfolio.static.domains/CareerSafe%20Personal%20Finance%20Management-1.png" class="d-block w-100" 
+                                    alt="CareerSafe Personal Financial Management Training Certification">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://e-portfolio.static.domains/CareerSafe%20OSHA-10%20Certification-1.png" class="d-block w-100" 
+                                    alt="CareerSafe OSHA-10 Training Certification">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://e-portfolio.static.domains/CareerSafe%20Cyber%20Safety%20Awareness%20Certificate-1.png" class="d-block w-100" 
+                                    alt="CareerSafe Cyber Safety Awareness Training Certification">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://e-portfolio.static.domains/CareerSafe%20Communication-1.png" class="d-block w-100" 
+                                    alt="CareerSafe Communication Skills Skills Training Certification">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                            </div>
+                        </div> 
                     </div>
                 </div>
         </main>
